- Version R2: Updated to .NET 6 - Fixed the Actors navbar link targeting Movies

--- a/CS1145_RazorPages/appsettings.json
+++ b/CS1145_RazorPages/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CS1145_MovieDb": "Server = localhost; Initial Catalog= 'CS1145_MovieDb'; Integrated Security = true;" 
+    "CS1145_MovieDb": "Server = localhost; Initial Catalog= 'CS1145_MovieDb'; Integrated Security = true; encrypt=false;" 
   }
 }
